# nnbhwd

./: CMakeLists.txt  README.md  SpatialConvolutionBHWD.lua  SpatialConvolutionUnfold.cu  SpatialMaxPoolingBHWD.cu  SpatialMaxPoolingBHWD.lua  init.cu  init.lua  nnbhwd-scm-1.rockspec  test.lua
generic/: SpatialConvolutionUnfold.c  SpatialMaxPoolingBHWD.c  init.c  init.c~
